<resources>
    <string name="app_name">FWB</string>
    <string name="app_name1">fwb</string>
    <string name="app_name2">- mshiko</string>
    <string name="app_name8">FWB - Mshiko</string>
    <string name="app_name3">Welcome to fwb - mshiko</string>
    <string name="app_name4">We\'re pleased to serve you today.\n Kindly login | register to enjoy using FWB Mshiko.</string>
    <string name="app_name5">Login</string>
    <string name="app_name6">Register</string>
    <string name="version">Ver 1.0.0</string>
    <string name="gm">Good morning.</string>
    <string name="gf">Good afternoon.</string>
    <string name="ge">Good evening.</string>
    <string name="l1">App Login</string>
    <string name="l2">Username</string>
    <string name="l2_1">Write username</string>
    <string name="l3">Password</string>
    <string name="l3_1">Write password</string>
    <string name="l4">Have you forgotten your password?</string>
    <string name="r">Member Registration</string>
    <string name="r1">Kindly fill the below details accordingly.</string>
    <string name="r2">Firstname</string>
    <string name="r2_1">Write first name</string>
    <string name="r3">Middle name</string>
    <string name="r3_1">Write middle name</string>
    <string name="r4">Surname</string>
    <string name="r4_1">Write surname</string>
    <string name="r5">Phone number</string>
    <string name="r5_1">Write phone number</string>
    <string name="r6">Email address</string>
    <string name="r6_1">Write email address</string>
    <string name="r7">Physical address</string>
    <string name="r7_1">Write physical address</string>
    <string name="r7_2">In case of emergency whom should be contacted (next of kin)</string>
    <string name="r7_3">Provide details of next of kin</string>
    <string name="r8">Preferred password</string>
    <string name="r8_1">Write the password</string>
    <string name="r8_2">Repeat the password</string>
    <string name="r9">Submit details</string>
    <string name="r10">Next</string>
    <string name="r11">Next of kin details</string>
    <string name="m1">App Info</string>
    <string name="m2">App Docs</string>
    <string name="m3">Help &amp; Feedback</string>
    <string name="m4">Contact Us</string>
    <string name="m5">Share</string>
    <string name="m6">Registration status</string>
    <string name="abtstatement">FWB Mshiko has been designed &amp; developed for the purpose of easing FWB operations to its valued members. Moreover facilitating loan request, payment information and processing.</string>
    <string name="versionno">Version no 1.0.0</string>
    <string name="title_copyright">&#169;2024 and Onwards</string>
    <string name="adv7">Process your loans instantly with FWB Mshiko.</string>
    <string name="adv8">Download FWB Mshiko app today:</string>
    <string name="adv9">Share</string>
    <string name="a1">My Profile</string>
    <string name="a1_0">Home</string>
    <string name="a2">Hello,</string>
    <string name="a3">View personal details</string>
    <string name="a4">FWB news &amp; announcements</string>
    <string name="a5">My financial status</string>
    <string name="a6">Shares:</string>
    <string name="a7">Long term loan:</string>
    <string name="a8">Emergency loan:</string>
    <string name="a9">Loan teller</string>
    <string name="a10">Request long term loan</string>
    <string name="a11">Request emergency loan</string>
    <string name="a12">Request loan top-up</string>
    <string name="a13">Loan processing status</string>
    <string name="a14">Loan endorsements</string>
    <string name="a15">Logout | Exit</string>
    <string name="a16">Returns:</string>
    <string name="a17">Debt:</string>
    <string name="a18">Posted on:</string>
    <string name="a19">News &amp; Announcements</string>
    <string name="a20">News Details</string>
    <string name="a21">In summary</string>
    <string name="a22">Full article</string>
    <string name="a23">Share</string>
    <string name="a24">Request info</string>
    <string name="a25">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="a25_1">It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</string>
    <string name="a26">Read this update from FWB Mshiko App:</string>
    <string name="a27">Download FWB Mshiko App today:</string>
    <string name="a28">Request Information</string>
    <string name="a29">Request information on</string>
    <string name="a30">You can request extra details via the following options</string>
    <string name="a31">Direct call to FWB administration</string>
    <string name="a32">Drop your request to FWB community</string>
    <string name="a33">There is no internet connection. Check your internet settings.</string>
    <string name="a34">Failed to send data, please try again.</string>
    <string name="a35">Your data have been successfully saved.</string>
    <string name="a44">All fields are required.</string>
    <string name="a45">Password should have 6 or more characters.</string>
    <string name="a46">Passwords don not match.</string>
    <string name="a47">Registration Status</string>
    <string name="a48">Thank you for registering your details in FWB Mshiko App. Congrats.</string>
    <string name="a49">Kindly fill your phone number to check for your registration status. \nLogin credentials have been sent to your SMS inbox.</string>
    <string name="a50">Submit phone number</string>
    <string name="a51">Send me login credentials</string>
    <string name="a52">Member verification status:</string>
    <string name="a53">Pending verification</string>
    <string name="a54">Verified</string>
    <string name="a55">Failed verification; Kindly communicate with FWB administration</string>
    <string name="a56">Request login credentials</string>
    <string name="a57">Username | Password is missing</string>
    <string name="a58">Username | Password is not correct. Try again.</string>
    <string name="a59">Successful login</string>
    <string name="a60">Member verification is pending, kindly check your verification status</string>
    <string name="a61">Failed member verification, kindly contact FWB Administration</string>
    <string name="a62">Admin tools</string>
    <string name="a63">Cancel</string>
    <string name="a64">Logout</string>
    <string name="a65">Are you sure you want to logout from FWB Mshiko?</string>
    <string name="a66">By clicking "Logout" you\'ll be logout from FWB Mshiko</string>
    <string name="a67">Successful logout</string>
    <string name="welerrorY">Yes</string>
    <string name="welerrorN">No</string>
    <string name="welerror6">Do you want to exit from FWB Mshiko?</string>
    <string name="a68">My profile</string>
    <string name="a69">Admin Tools</string>
    <string name="a70">Role:</string>
    <string name="a71">My tools</string>
    <string name="a72">View all members &amp; status</string>
    <string name="a73">loan processing</string>
    <string name="a74">Reports</string>
    <string name="a75">Member Details</string>
    <string name="a76">Individual details</string>
    <string name="a77">Name:</string>
    <string name="a78">Email:</string>
    <string name="a79">Phone#:</string>
    <string name="a80">Physical address:</string>
    <string name="a81">Next of kin details</string>
    <string name="a82">Edit details</string>
    <string name="a83">Back to my profile</string>
    <string name="a84">Member details is not available</string>
    <string name="a85">Phone number is required</string>
    <string name="a86">Member details is not available, kindly fill the registration form</string>
    <string name="a87">Failure in sending data, please try again</string>
    <string name="a88">Verified</string>
    <string name="a89">Pending verification</string>
    <string name="a90">Failed verification</string>
    <string name="a91">All Members</string>
    <string name="a92">FWB member details</string>
    <string name="a93">Date registered:</string>
    <string name="a94">Approve member</string>
    <string name="a95">Reject member</string>
    <string name="a96">Back</string>
    <string name="a97">Member</string>
    <string name="a98">Chairman</string>
    <string name="a99">Secretary</string>
    <string name="a100">Finance | Accountant</string>
    <string name="a101">Administrator</string>
    <string name="a102">Member has been approved | verified successful</string>
    <string name="a103">Member has been rejected successful</string>
    <string name="a104">There was a processing error. Please try again.</string>
    <string name="a105">Verification status:</string>
    <string name="a106">Loan is approved yet by referee</string>
    <string name="a107">Loan is not approved yet by referee</string>
    <string name="lo1">Long Term Loan</string>
    <string name="lo2">Long term loan amount ranges from Tsh 200,000 to 2,500,000</string>
    <string name="lo3">Loan amount</string>
    <string name="lo4">Write loan amount (in numbers)</string>
    <string name="lo5">Calculate (Principal + Interest)</string>
    <string name="lo7">Select loan endorsers</string>
    <string name="lo8">First endorser</string>
    <string name="lo9">Second endorser</string>
    <string name="lo10">Your returns are (in Tsh):</string>
    <string name="lo11">Submit your request</string>
    <string name="lo12">Loan amount is required</string>
    <string name="lo13">Loan amount is large</string>
    <string name="lo14">Loan endorsers</string>
    <string name="lo15">1.</string>
    <string name="lo16">2.</string>
    <string name="lo17">Your loan request has been submitted successfully.</string>
    <string name="lo18">Back to profile</string>
    <string name="lo19">Loan status</string>
    <string name="lo20">You have a pending loan request, please wait.</string>
    <string name="lo21">Relationship</string>
    <string name="lo22">Write relationship</string>
    <string name="lo23">Loan payment</string>
    <string name="lo24">Add financial details</string>
    <string name="lp">Loan Payment</string>
    <string name="lp1">Amount (in numerals)</string>
    <string name="lp2">Write amount in numerals.</string>
    <string name="lp3">Select loan type</string>
    <string name="lp3_1">Selected loan type</string>
    <string name="lp4">Submit</string>
    <string name="lp5">Transaction reference</string>
    <string name="lp6">Write transaction reference</string>
    <string name="lp7">All fields are required</string>
    <string name="lp8">Your loan details have been stored</string>
    <string name="lp9">Your emergency loan request has been submitted</string>
    <string name="lp10">Your about to submit your emergency loan request. Tap Yes to proceed | No to cancel the request.</string>
    <string name="lp11">Yes</string>
    <string name="lp12">No</string>
    <string name="f0">Financial Details</string>
    <string name="f1">Shares</string>
    <string name="f1_0">Write shares</string>
    <string name="f2">Long term loan amount (include interest)</string>
    <string name="f2_0">Write long term loan amount (include interest)</string>
    <string name="f3">Emergency loan amount</string>
    <string name="f3_0">Write emergency loan amount</string>
    <string name="f4">Save</string>
</resources>