<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterEx"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/layout"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back"
                android:layout_marginEnd="5dp"
                app:tint="@color/white"
                android:contentDescription="@string/app_name"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/r11"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/menuST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mmenu"
                android:layout_marginEnd="10dp"
                app:tint="@color/white"
                android:contentDescription="@string/app_name"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_light"
            android:text="@string/r7_2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            />
            <TextView
                android:layout_width="325dp"
                android:layout_height="2dp"
                android:fontFamily="@font/google_sans_light"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/green"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r2_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/mname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r3_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r4"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r4_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r5"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r5_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="phone"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r7"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/physical"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r7_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/lo21"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/relationship"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/lo22"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r8"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/passk"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r8_1"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <EditText
                android:id="@+id/passks"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/r8_2"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r9"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/google_sans_light"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textAlignment="center"
                app:drawableRightCompat="@drawable/nexts"
                />
            <ProgressBar
                android:id="@+id/my_progressBarCars"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:indeterminate="true"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>