<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFinancialDetails"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back"
                android:layout_marginEnd="5dp"
                app:tint="@color/white"
                android:contentDescription="@string/app_name"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/f0"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/menuST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mmenu"
                android:layout_marginEnd="10dp"
                app:tint="@color/white"
                android:contentDescription="@string/app_name"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/r1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="325dp"
                android:layout_height="2dp"
                android:fontFamily="@font/google_sans_light"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/green"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/f1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/shares"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/f1_0"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="number"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/f2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/lterm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/f2_0"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="number"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_light"
                android:text="@string/f3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                />
            <EditText
                android:id="@+id/eloan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/f3_0"
                android:textColorHint="@color/green"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="number"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                />

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/google_sans_light"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textAlignment="center"
                app:drawableRightCompat="@drawable/nexts"
                />

            <TextView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a96"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/google_sans_light"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:textAlignment="center"
                app:drawableRightCompat="@drawable/nexts"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>